# libsvm

./: CMakeLists.txt  svm-predict.c  svm-scale.c  svm-train.c  svm.cpp  svm.h
